fix: statusInvest request URL and JSON Objects (#33)
fix: statusInvest request URL and JSON Objects
refactor: adding lombok
build: new server port